# docxcpp

./: .gitignore  CMakeLists.txt  CPP_VS_PYTHON_DOCX.md  CPP_VS_PYTHON_DOCX_CN.md  README.md  docxcpp_vs_python_docx.md
cmake/: GenerateDefaultTemplate.cmake  VerifyInstalledPackage.cmake  docxcppConfig.cmake.in
examples/: full_feature_5_pages.cpp  minimal.cpp  read_existing.cpp  sections_headers_footers.cpp  styles_and_tables.cpp
include/docxcpp/: document.hpp  export.hpp  opc_package.hpp  paragraph.hpp  section.hpp  table.hpp
src/: document.cpp  document_paragraph_format.cpp  header_footer.cpp  hyperlink_comment.cpp  layout.cpp  media.cpp  opc_package.cpp  paragraph.cpp  paragraph_ops.cpp  section.cpp  table.cpp
src/internal/: default_template_support.hpp  document_model_support.hpp  header_footer_support.hpp  hyperlink_comment_support.hpp  layout_support.hpp  media_support.hpp  paragraph_support.hpp  style_support.hpp
tests/: .api_coverage_test.cpp.swp  api_coverage_test.cpp  generate_python_docx_fixture.py  python_docx_read_test.cpp  python_docx_regression.py  smoke_test.cpp  validate_full_feature_example.py
tests/package_smoke/: CMakeLists.txt  main.cpp
tools/: embed_default_template.py
